--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
-<app-list-produit></app-list-produit>
+<!--<app-list-produit></app-list-produit>-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/">Home</a>
+    <a class="navbar-brand" routerLink="/products">Products</a>
+    
+  </nav>
+<router-outlet></router-outlet>
