--- a/src/app/not-found-page/not-found-page.component.html
+++ b/src/app/not-found-page/not-found-page.component.html
@@ -1,1 +1,4 @@
-<p>not-found-page works!</p>
+<div class="mx-auto" style="width: 200px;">
+    <img src="assets/images/not-found.jpg" alt="">
+
+</div>
